# modbusX

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: 任何-issues.md
.github/workflows/: c-cpp.yml
Example/: C_format_example.c  H_format_example.h  gcc-arm-none-eabi.cmake  win-gcc.cmake
Example/README.DATA/: README_EN.md
Example/arm_size/: MBx_user.h  arm_main.c  post-build-tasks.cmake  startup_stm32h743xx.s  stm32H743XI.ld  syscalls.c
Example/modbus poll/: 0~1 保持寄存器测试.mbp  100·101 16进制单寄存器测试.mbp  200~201 32位值单寄存器设置测试.mbp  202~203 32位值组合映射测试.mbp  204~207 32位值分立乱序测试.mbp  2~3 输入寄存器测试.mbp  300~301 单精度浮点组合映射测试.mbp
Example/modbus slave/: 0~3 保持寄存器测试.mbs  100~101 输入寄存器写失败测试.mbs  200~201 输入寄存器多个拼凑测试.mbs  300~301 浮点测试.mbs
Example/win_test/: MBx_user.h  RTU_Mmain.c  RTU_Smain.c  TCP_Mmain.c  TCP_Smain.c  Win_Mmain.c  Win_Smain.c  测试介绍.md
common/: CMakeLists.txt
common/include/: MBx_api.h  MBx_user_sample.h  MBx_utility.h
common/source/: MBx_Init_Attr.c  MBx_Init_Master_Config.c  MBx_Init_Master_Error.c  MBx_Init_Master_Parse.c  MBx_Init_Master_Request.c  MBx_Init_Runtime.c  MBx_Init_Slave_Config.c  MBx_Init_Slave_Parse.c  MBx_Master_Engine.c  MBx_Master_Engine_IDLE.c  MBx_Master_Engine_READ.c  MBx_Master_Engine_WAIT.c  MBx_Master_Engine_WRITE.c  MBx_Master_Handle.c  MBx_Master_Init.c  MBx_Master_Member_Add.c  MBx_Master_Parse.c  MBx_Master_RTU_Handle.c  MBx_Master_RTU_Parse.c  MBx_Master_Scan.c  MBx_Master_TCP_Parse.c  MBx_Master_User_Request.c  MBx_Runtime_Init.c  MBx_Slave_Engine.c  MBx_Slave_Engine_IDLE.c  MBx_Slave_Engine_READ.c  MBx_Slave_Engine_WRITE.c  MBx_Slave_Handle.c  MBx_Slave_Init.c  MBx_Slave_Parse.c  MBx_Slave_Parse_RTU.c  MBx_Slave_RTU_Handle.c  MBx_Slave_RTU_Parse.c  MBx_Slave_Scan.c  MBx_Slave_TCP_Parse.c  MBx_Ticks.c  MBx_utility_MemMove.c  MBx_utility_crc16.c  MBx_utility_err_trace.c  MBx_utility_map_list.c  (+3 more)
port/generic/inc/: MBx_port.h
port/h_level/python/: MBx_ExHeader_py.h  MBx_bindings.py  cmd
port/win32/inc/: MBx_port.h
unitTest/test_case/test_library/: CmakeLists.txt  test_library_master.cpp
unitTest/test_case/test_utility/: CmakeLists.txt  test_utility_crc.cpp  test_utility_trace.cpp
